--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ addons:
 env:
   matrix:
     - ARCH="riscv32"
-    - ARCH="x86_64"
 
 install:
   - if [ $ARCH = riscv32 ]; then
@@ -31,4 +30,7 @@ before_script:
   - (test -x $HOME/.cargo/bin/bootimage || cargo install bootimage)
 
 script:
-  - cd kernel && make build arch=$ARCH
+  - cd kernel && make build arch=$ARCH smp=1
+
+test:
+  - python test/test.py
