--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,5 @@ before_script:
   - (test -x $HOME/.cargo/bin/bootimage || cargo install bootimage)
 
 script:
+  - (cd kernel && make run)
   - python test/test.py
