--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,6 @@ rust: nightly
 cache:
   cargo: true
 
-addons:
-  apt:
-    packages:
-      - qemu
-
 env:
   matrix:
     - ARCH="riscv32"
@@ -28,7 +23,7 @@ before_script:
   - rustup component add rust-src
   - (test -x $HOME/.cargo/bin/cargo-xbuild || cargo install cargo-xbuild)
   - (test -x $HOME/.cargo/bin/bootimage || cargo install bootimage)
-  - (wget https://download.qemu.org/qemu-3.1.0.tar.xz && tar xvJf qemu-3.1.0.tar.xz > /dev/null && cd qemu-3.1.0 && ./configure --target-list=riscv32-softmmu && make)
+  - wget https://download.qemu.org/qemu-3.1.0.tar.xz && tar xvJf qemu-3.1.0.tar.xz > /dev/null && cd qemu-3.1.0 && ./configure --target-list=riscv32-softmmu && make
 
 script:
   - (cd kernel && make run)
