--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ before_script:
   - rustup component add rust-src
   - (test -x $HOME/.cargo/bin/cargo-xbuild || cargo install cargo-xbuild)
   - (test -x $HOME/.cargo/bin/bootimage || cargo install bootimage)
-  - wget https://download.qemu.org/qemu-3.1.0.tar.xz && tar xvJf qemu-3.1.0.tar.xz > /dev/null && cd qemu-3.1.0 && ./configure --target-list=riscv32-softmmu && make
+  - (wget https://download.qemu.org/qemu-3.1.0.tar.xz && tar xvJf qemu-3.1.0.tar.xz > /dev/null && cd qemu-3.1.0 && ./configure --target-list=riscv32-softmmu && make)
+  - export PATH=$PATH:$PWD/qemu-3.1.0/riscv32-softmmu
 
 script:
   - (cd kernel && make run)
