--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -6,6 +6,10 @@ authors = ["Runji Wang <wangrunji0408@163.com>"]
 [features]
 link_user_program = []
 no_bbl = []
+no_test = []
+test_mutex_philosopher = []
+test_monitor_philosopher = []
+
 
 [profile.dev]
 # MUST >= 1 : Enable RVO to avoid stack overflow
