--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -31,7 +31,7 @@ lazy_static = { version = "1.2", features = ["spin_no_std"] }
 bit-allocator = { path = "../crate/bit-allocator" }
 ucore-memory = { path = "../crate/memory" }
 ucore-process = { path = "../crate/process" }
-simple-filesystem = { git = "https://github.com/wangrunji0408/SimpleFileSystem-Rust", branch = "multi-thread" }
+simple-filesystem = { path = "../crate/simple-filesystem" }
 
 
 [target.'cfg(target_arch = "riscv32")'.dependencies]
